@@ -1,6 +1,6 @@
 {
   "name": "simp-useradd",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "author": "SIMP Team",
   "summary": "A SIMP puppet module for managing settings regarding users and user creation",
   "license": "Apache-2.0",
@@ -23,15 +23,15 @@
   "dependencies": [
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.9.0 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 8.0.0 < 9.0.0"
+      "version_requirement": ">= 8.0.0 < 10.0.0"
     },
     {
       "name": "puppet/systemd",
-      "version_requirement": ">= 4.0.2 < 6.0.0"
+      "version_requirement": ">= 4.0.2 < 7.0.0"
     }
   ],
   "operatingsystem_support": [
@@ -72,7 +72,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 6.22.1 < 8.0.0"
+      "version_requirement": ">= 7.0.0 < 9.0.0"
     }
   ]
 }
